some UI changes

--- a/configServer/views/partials/header.ejs
+++ b/configServer/views/partials/header.ejs
@@ -37,7 +37,7 @@
                 <li><a href="login">Home</a></li>
                 <li><a href="network_monitoring">Network Monitoring</a></li>
                 <li><a href="dfu">DFU-OTA</a></li>
-                <li><a href="port_monitoring">Port Monitoring</a></li>
+                <!--<li><a href="port_monitoring">Port Monitoring</a></li>-->
             </ul>
         </div>
     </nav>
